# ZeroBase

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/zerobase-auth/: Cargo.toml
crates/zerobase-auth/src/: chain.rs  challenge.rs  error.rs  identity.rs  lib.rs
crates/zerobase-auth/tests/: auth.rs
crates/zerobase-caps/: Cargo.toml
crates/zerobase-caps/src/: lib.rs
crates/zerobase-caps/tests/: caps.rs
crates/zerobase-cli/: Cargo.toml
crates/zerobase-cli/src/: main.rs
crates/zerobase-client/: Cargo.toml
crates/zerobase-client/src/: error.rs  lib.rs
crates/zerobase-client/tests/: e2e.rs
crates/zerobase-core/: Cargo.toml
crates/zerobase-core/src/: crypto.rs  engine.rs  error.rs  keyring.rs  lib.rs  manifest.rs  memtable.rs  sstable.rs  wal.rs
crates/zerobase-proto/: Cargo.toml
crates/zerobase-proto/src/: codec.rs  lib.rs  messages.rs
crates/zerobase-proto/tests/: codec.rs
crates/zerobase-server/: Cargo.toml
crates/zerobase-server/src/: config.rs  lib.rs  main.rs  server.rs  session.rs  state.rs
crates/zerobase-server/tests/: daemon.rs
crates/zerobase-sql/: Cargo.toml
crates/zerobase-sql/src/: catalog.rs  codec.rs  engine.rs  error.rs  lib.rs  parse.rs  plan.rs  types.rs
crates/zerobase-sql/src/exec/: ddl.rs  dml.rs  expr.rs  mod.rs  scan.rs
crates/zerobase-sql/tests/: sql_e2e.rs
docs/: KEYSPACE.md  PROTOCOL.md  QUICKSTART.md  THREAT_MODEL.md
