[workspace]
resolver = "2"
members = [
    "crates/zerobase-core",
    "crates/zerobase-cli",
    "crates/zerobase-sql",
    "crates/zerobase-auth",
    "crates/zerobase-proto",
    "crates/zerobase-caps",
    "crates/zerobase-server",
    "crates/zerobase-client",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
rust-version = "1.75"
license     = "Apache-2.0"
repository  = "https://github.com/ODev-M/zerobase"
homepage    = "https://github.com/ODev-M/zerobase"
authors     = ["ODev-M"]
description = "Zero-trust encrypted key-value store written in Rust."
keywords    = ["database", "encryption", "kv-store", "security", "zero-trust"]
categories  = ["database-implementations", "cryptography"]

[workspace.dependencies]
# Crypto — all pure-Rust, audited, no OpenSSL
aes-gcm          = { version = "0.10", features = ["aes", "std"] }
argon2           = { version = "0.5", features = ["std"] }
ed25519-dalek    = { version = "2.1", features = ["rand_core", "pkcs8"] }
blake3           = { version = "1.5", features = ["std"] }
rand             = { version = "0.8", features = ["std", "std_rng"] }

# Memory safety
zeroize          = { version = "1.8", features = ["derive"] }
subtle           = "2.6"
secrecy          = { version = "0.10", features = ["serde"] }

# Serialization / encoding
serde            = { version = "1.0", features = ["derive"] }
serde-big-array  = "0.5"
bincode          = "1.3"
hex              = "0.4"

# Concurrency
parking_lot      = "0.12"

# Errors & logging
thiserror        = "1.0"
anyhow           = "1.0"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap             = { version = "4.5", features = ["derive", "env"] }
rpassword        = "7.3"

# SQL
sqlparser        = "0.54"

# Dev / bench
tempfile         = "3.10"
criterion        = { version = "0.5", features = ["html_reports"] }
proptest         = "1.5"

[profile.release]
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
opt-level     = 3

[profile.release.package."*"]
opt-level = 3
