[package]
name        = "zerobase-auth"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Identity, signed challenges, and key-rotation chains for Zerobase."

[lib]
name = "zerobase_auth"
path = "src/lib.rs"

[dependencies]
ed25519-dalek = { workspace = true }
blake3        = { workspace = true }
rand          = { workspace = true }
zeroize       = { workspace = true }
serde         = { workspace = true }
serde-big-array = { workspace = true }
bincode       = { workspace = true }
hex           = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
