[package]
name        = "zerobase-cli"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Command-line interface for the Zerobase encrypted key-value store."

[[bin]]
name = "zerobase"
path = "src/main.rs"

[dependencies]
zerobase-core = { path = "../zerobase-core" }
clap          = { workspace = true }
rpassword     = { workspace = true }
hex           = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
secrecy       = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
