[package]
name        = "zerobase-core"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Core storage engine and cryptography for Zerobase."

[lib]
name = "zerobase"
path = "src/lib.rs"

[dependencies]
aes-gcm       = { workspace = true }
argon2        = { workspace = true }
ed25519-dalek = { workspace = true }
blake3        = { workspace = true }
rand          = { workspace = true }
zeroize       = { workspace = true }
subtle        = { workspace = true }
secrecy       = { workspace = true }
serde         = { workspace = true }
bincode       = { workspace = true }
hex           = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
proptest  = { workspace = true }
criterion = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all                        = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
# `pedantic` is too noisy for an MVP; enable selectively instead.
needless_pass_by_value     = "warn"
inefficient_to_string      = "warn"
semicolon_if_nothing_returned = "warn"
