[package]
name        = "zerobase-sql"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "SQL parser, planner and executor on top of zerobase-core."

[dependencies]
zerobase-core = { path = "../zerobase-core" }
sqlparser     = { workspace = true }
serde         = { workspace = true }
bincode       = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
blake3        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
secrecy  = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all                          = { level = "warn", priority = -1 }
needless_pass_by_value       = "warn"
inefficient_to_string        = "warn"
semicolon_if_nothing_returned = "warn"
